# cbor2

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  README.rst  SECURITY.md  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build-aarch64.yml  build.yml  cifuzz.yml  codeqa-test.yml  publish.yml  test.yml
cbor2/: __init__.py  _decoder.py  _encoder.py  _types.py  compat.py  decoder.py  encoder.py  tool.py  types.py
docs/: api.rst  conf.py  customizing.rst  index.rst  tool.rst  usage.rst  versionhistory.rst
python/cbor2/: __init__.py  __init__.pyi  tool.py
rust/: Cargo.toml  decoder.rs  encoder.rs  lib.rs  types.rs  utils.rs
scripts/: coverage_server.py  half_float_tables.py  ref_leak_test.py  speed_test.py
source/: decoder.c  decoder.h  encoder.c  encoder.h  halffloat.c  module.c  module.h  tags.c  tags.h
tests/: conftest.py  examples.cbor.b64  examples.json  hypothesis_strategies.py  test_benchmark.py  test_decoder.py  test_encoder.py  test_tool.py  test_types.py
tests/fuzzers/: loads_fuzzer.py
