[metadata]
name = cbor2
description = Pure Python CBOR (de)serializer with extensive tag support
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
maintainer = Kio Smallwood (Sekenre)
maintainer_email = kio@mothers-arms.co.uk
project_urls =
    Documentation = https://cbor2.readthedocs.org/en/latest/
    Source Code = https://github.com/agronholm/cbor2
    Issue Tracker = https://github.com/agronholm/cbor2/issues
license = MIT
keywords = serialization cbor
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >= 3.7

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
