[package]
name = "cbor2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_cbor2"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
bigdecimal = "0.4.10"
half = "2.7.1"
num-bigint = "*"
pyo3 = { version = "0.28.0", features = ["extension-module", "experimental-inspect", "num-bigint", "bigdecimal"] }

[build-dependencies]
pyo3-build-config = { version = "0.28.1", features = ["resolve-config"] }
